--- a/Paliwal_Dhananjaya_Exercise_01.ipynb
+++ b/Paliwal_Dhananjaya_Exercise_01.ipynb
@@ -60,7 +60,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "058a5bbb-6d49-41d6-9182-57ac207ea753"
+        "outputId": "cd9d8549-2fe9-40a6-c2c5-80a11d52f275"
       },
       "execution_count": 1,
       "outputs": [
@@ -68,8 +68,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the length and width of the rectangle: 4,5\n",
-            "The area of the rectangle is: 20.0\n"
+            "Enter the length and width of the rectangle: 5,6\n",
+            "The area of the rectangle is: 30.0\n"
           ]
         }
       ]
@@ -103,7 +103,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3012ed79-8c5d-4fe2-ea29-07af4bc88b5c"
+        "outputId": "680f0a33-6934-4d37-81ce-7f8c40aa4f95"
       },
       "execution_count": 2,
       "outputs": [
@@ -136,15 +136,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "816a16d2-c76b-47a8-e29e-4a27eaeeea7f"
+        "outputId": "95be5c7e-a7ab-4e66-8bcd-e1d4351596cf"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a string: Python\n",
-            "The length of the string is: 6\n"
+            "Enter a string: openai.ai\n",
+            "The length of the string is: 9\n"
           ]
         }
       ],
@@ -177,7 +177,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "637c1596-26b6-434c-ed82-90f3d4bd24bd"
+        "outputId": "e8612fa8-cfd4-4bd6-e599-de3973d54028"
       },
       "outputs": [
         {
@@ -224,7 +224,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ce641c2b-1e72-4d7a-fb25-198c0fb4ce80"
+        "outputId": "e4df0a86-3734-44c6-93b9-0fabdcddb35a"
       },
       "outputs": [
         {
@@ -267,7 +267,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2daab0eb-73a4-42f1-d670-0ffecb186d56"
+        "outputId": "721f6b71-5c91-48c4-d821-b80056039c91"
       },
       "outputs": [
         {
@@ -317,7 +317,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4154acde-b7f4-4f23-fc6c-ebec1b09fa6d"
+        "outputId": "9f206a0c-1e6f-4bc1-a6bc-bdf0d868d60e"
       },
       "execution_count": 7,
       "outputs": [
@@ -325,8 +325,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a number: 5\n",
-            "Factorial of 5 = 120\n"
+            "Enter a number: 6\n",
+            "Factorial of 6 = 720\n"
           ]
         }
       ]
@@ -357,7 +357,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5f617f3f-eb83-499b-c784-44462d7533c9"
+        "outputId": "3a61cdb2-b792-4cc8-d29c-00089f3286af"
       },
       "execution_count": 8,
       "outputs": [
@@ -389,7 +389,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "381f5f66-3623-4f52-adb0-054006308abf"
+        "outputId": "196c8df8-fd01-4a23-afe6-ed45f46f402c"
       },
       "outputs": [
         {
@@ -440,7 +440,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "65301888-6f93-4647-cb9f-b01dbe1fbb96"
+        "outputId": "0b934822-4e67-4a14-bd7d-cb20958744d2"
       },
       "outputs": [
         {
@@ -487,7 +487,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7232dead-38df-431b-b835-58cc1a1bd1fd"
+        "outputId": "9b3c5487-2d32-4c95-daf4-17d215f9f6b8"
       },
       "execution_count": 11,
       "outputs": [
@@ -533,7 +533,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "49fae215-8437-4ba0-d59b-b975d1d7b367"
+        "outputId": "1fa855d8-494f-48ef-80f4-0de5c0fc9924"
       },
       "execution_count": 12,
       "outputs": [
@@ -565,15 +565,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8c1ba79d-5379-40cc-c956-ce0a829ace29"
+        "outputId": "3eee9add-08a4-4393-aa82-319b5e126f55"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a list of integers separated by comma: [1,2,3,4,5,4,5,4,5]\n",
-            "Duplicate elements: [4, 5]\n"
+            "Enter a list of integers separated by comma: [1,2,3,4,1,2,6,7]\n",
+            "Duplicate elements: [1, 2]\n"
           ]
         }
       ],
@@ -613,7 +613,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "772cd7b3-aa4f-4444-f88c-67e649ecf06e"
+        "outputId": "1635bf11-0dfe-4d95-e7f3-631cd7bbe5c0"
       },
       "outputs": [
         {
@@ -621,8 +621,8 @@
           "name": "stdout",
           "text": [
             "Enter a list of integers separated by comma: [1,2,3,4,5]\n",
-            "Enter another list of integers separated by comma: [3,5,4,1]\n",
-            "Common elements: [1, 3, 4, 5]\n"
+            "Enter another list of integers separated by comma: [2,3,5,6]\n",
+            "Common elements: [2, 3, 5]\n"
           ]
         }
       ],
@@ -699,21 +699,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "440f7543-044d-4afa-9cba-7e17f1b96f24"
+        "outputId": "9ea4b5f4-2cfc-4c66-aba7-a60eba99689a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Group 1 (size 5): ['md0825', 'sn0913', 'sr1385', 'md0894', 'sm2985']\n",
-            "Group 2 (size 5): ['ac1964', 'mh1068', 'srk0204', 'sv1752', 'hs0665']\n",
-            "Group 3 (size 5): ['pk0553', 'un0045', 'ap1484', 'ad1198', 'gp0252']\n",
-            "Group 4 (size 5): ['an0892', 'vk0656', 'hc0612', 'mk1317', 'sr1335']\n",
-            "Group 5 (size 5): ['mk1302', 'sk2922', 'sv1394', 'md0912', 'gt0217']\n",
-            "Group 6 (size 5): ['tk0412', 'vg0433', 'rb0846', 'tv0186', 'mr1765']\n",
-            "Group 7 (size 5): ['yj0173', 'ms2060', 'nt0385', 'sk2936', 'vg0598']\n",
-            "Group 8 (size 4): ['tk0411', 'sy0594', 'sv1555', 'mm2372']\n"
+            "Group 1 (size 5): ['ap1484', 'sv1394', 'tk0412', 'tv0186', 'sk2936']\n",
+            "Group 2 (size 5): ['sy0594', 'ac1964', 'mr1765', 'sr1385', 'hs0665']\n",
+            "Group 3 (size 5): ['sr1335', 'sv1752', 'vk0656', 'sn0913', 'un0045']\n",
+            "Group 4 (size 5): ['md0825', 'md0912', 'sm2985', 'yj0173', 'mk1302']\n",
+            "Group 5 (size 5): ['md0894', 'ms2060', 'tk0411', 'mh1068', 'rb0846']\n",
+            "Group 6 (size 5): ['hc0612', 'sk2922', 'nt0385', 'vg0598', 'vg0433']\n",
+            "Group 7 (size 5): ['pk0553', 'gp0252', 'gt0217', 'sv1555', 'mm2372']\n",
+            "Group 8 (size 4): ['an0892', 'mk1317', 'srk0204', 'ad1198']\n"
           ]
         }
       ],
@@ -775,15 +775,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8bcd42b2-b5ea-4a66-effc-05f1f7c103c0"
+        "outputId": "12d39253-647a-43fc-9ba3-e49f49807b79"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a positive integer: 10\n",
-            "Count of even numbers: 5\n"
+            "Enter a positive integer: 50\n",
+            "Count of even numbers: 25\n"
           ]
         }
       ],
@@ -811,13 +811,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 17,
       "metadata": {
         "id": "ZnoxhSglQs3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c3055fc3-50ca-49c4-e877-d6c3226b973a"
+        "outputId": "ec7aa3ac-7821-40b8-b122-5a5fb0fb4d64"
       },
       "outputs": [
         {
@@ -874,29 +874,18 @@
       "metadata": {
         "id": "hwtr1wZmVX5A",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 228
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b8a0ff50-6084-41f4-ce1a-a2b2094b6a09"
+        "outputId": "2015bcc4-2cc3-4420-fd6a-641e5095ef48"
       },
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Enter your age: 5\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueTooSmallError",
-          "evalue": "Age is too small! Must be at least 18.",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueTooSmallError\u001b[0m                        Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-157153246.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mage\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m18\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueTooSmallError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Age is too small! Must be at least 18.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Age is valid:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueTooSmallError\u001b[0m: Age is too small! Must be at least 18."
+            "Enter your age: 20\n",
+            "Age is valid: 20\n"
           ]
         }
       ]
@@ -924,9 +913,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5406d5b-05fe-422d-8794-26e479aaf5ef"
+        "outputId": "a1f27a4c-08c3-474a-c428-fbd801e51f84"
       },
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -969,16 +958,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "95bec0fb-df9e-49d5-a7c9-4e2b8f5974a7"
+        "outputId": "babdd5b4-1724-4dec-9cf3-940a365c507b"
       },
-      "execution_count": 22,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Enter the desired password length: 10\n",
-            "Generated password: G{2mZlRQ#J\n"
+            "Generated password: 7o%%l>?e].\n"
           ]
         }
       ]
@@ -1026,9 +1015,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "035214ff-559e-4f56-d405-e0ce3b4896f2"
+        "outputId": "220cb79f-5416-4358-aefa-9aae7ebf4249"
       },
-      "execution_count": 23,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1089,9 +1078,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c884c4af-e614-453a-b7d8-1ad6e85bacd5"
+        "outputId": "f20de9e2-eab7-42e4-dfdc-dfb35761e6e6"
       },
-      "execution_count": 24,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,17 +1129,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "58322ef3-8a6b-48a6-c672-6eaa7813e18f"
+        "outputId": "ca25c855-f78e-4ae2-e29a-30ff1c8d883f"
       },
-      "execution_count": 26,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Enter the first number: 3\n",
-            "Enter the second number: 2\n",
-            "Result: 1.5\n"
+            "Enter the second number: 0\n",
+            "Error: Division by zero is not allowed.\n"
           ]
         }
       ]
@@ -1190,9 +1179,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "outputId": "a6241300-6248-4c44-fbdf-296fa39cbf5c"
+        "outputId": "aecae8e8-15c5-43d3-c51b-e75a94a09f9b"
       },
-      "execution_count": 27,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1205,9 +1194,18 @@
             }
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 26
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5u1KdBckAGCz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
